--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #000;
             color: #fff;
             font-family: Arial, sans-serif;
-            overflow: hidden; /* Prevent scrolling */
+            overflow: hidden; /* Prevent scrolling until user enters */
         }
 
         /* Full-Screen Blur Overlay */
@@ -40,7 +40,12 @@
             cursor: pointer;
         }
 
-        /* General Styling */
+        /* Main Body Styling */
+        body.active {
+            overflow: auto; /* Enable scrolling when active */
+        }
+
+        /* Smooth Entering Animation */
         .fade-in {
             opacity: 0;
             transform: translateY(20px);
@@ -54,6 +59,7 @@
             }
         }
 
+        /* Sidebar Styling */
         .sidebar {
             position: fixed;
             top: 0;
@@ -111,6 +117,73 @@
         .main-content.shifted {
             margin-left: 200px;
         }
+
+        /* Store Page Styling */
+        .store-items {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        .store-item {
+            background-color: #222;
+            border: 1px solid #333;
+            border-radius: 10px;
+            padding: 15px;
+            text-align: center;
+            color: #fff;
+        }
+
+        .store-item img {
+            max-width: 100%;
+            border-radius: 10px;
+            margin-bottom: 10px;
+        }
+
+        .store-item h3 {
+            margin: 10px 0;
+        }
+
+        .store-item p {
+            margin: 5px 0;
+        }
+
+        .store-item button {
+            margin-top: 10px;
+            padding: 10px;
+            background-color: #7289da;
+            border: none;
+            border-radius: 5px;
+            color: #fff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .store-item button:hover {
+            background-color: #5865f2;
+        }
+
+        /* Discord Embed Styling */
+        iframe {
+            width: 80%;
+            max-width: 300px;
+            height: 400px;
+            border: none;
+            margin: 20px auto;
+            display: block;
+        }
+
+        /* Mobile-Friendly Adjustments */
+        @media screen and (max-width: 600px) {
+            .store-items {
+                grid-template-columns: 1fr;
+            }
+
+            iframe {
+                height: 300px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -155,7 +228,6 @@
         <h1>Store</h1>
         <p>Check out our items below:</p>
         <div class="store-items">
-            <!-- Example Store Items -->
             <div class="store-item">
                 <img src="https://files.catbox.moe/s7iw8m.jpeg" alt="Item 1">
                 <h3>Minecraft SFA</h3>
@@ -163,7 +235,6 @@
                     <button>Buy Now</button>
                 </a>
             </div>
-
             <div class="store-item">
                 <img src="https://files.catbox.moe/pqjd5n.jpeg" alt="Item 2">
                 <h3>Optifine Account</h3>
@@ -215,7 +286,7 @@
             document.getElementById('enter-screen').style.display = 'none';
 
             // Enable scrolling
-            document.body.style.overflow = 'auto';
+            document.body.classList.add('active');
         });
     </script>
 </body>
