--- a/index.html
+++ b/index.html
@@ -110,8 +110,13 @@
         }
 
         .main-content {
-            margin: 20px;
-            transition: margin-left 0.3s ease;
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
         }
 
         .main-content.shifted {
