--- a/index.html
+++ b/index.html
@@ -40,116 +40,34 @@
             cursor: pointer;
         }
 
-        /* Main Body Styling */
-        body.active {
-            overflow: auto; /* Enable scrolling when active */
-        }
-
-        /* Sidebar Styling */
-        .sidebar {
+        /* Music Pulsating Circle */
+        .pulsating-circle {
             position: fixed;
-            top: 0;
-            left: -200px;
-            width: 200px;
-            height: 100%;
-            background-color: #111;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
-            padding-top: 80px;
-            z-index: 1000;
-            transition: left 0.3s ease;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            background: radial-gradient(circle, #7289da 0%, #111 100%);
+            opacity: 0.8;
+            z-index: 1;
+            animation: pulse 1.5s infinite;
         }
 
-        .sidebar.open {
-            left: 0;
-        }
-
-        .sidebar a {
-            display: block;
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin-bottom: 10px;
-        }
-
-        .sidebar a:hover {
-            background-color: #333;
-            color: #7289da;
-        }
-
-        .sidebar-toggle {
-            position: fixed;
-            top: 15px;
-            left: 15px;
-            z-index: 1100;
-            background-color: #111;
-            color: #fff;
-            border: none;
-            padding: 10px 15px;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .sidebar-toggle:hover {
-            background-color: #333;
-        }
-
-        .main-content {
-            margin: 0;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-
-        .main-content.shifted {
-            margin-left: 200px;
-        }
-
-        /* Store Page Styling */
-        .store-items {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); /* Smaller grid items */
-            gap: 10px; /* Reduced gap */
-            margin-top: 10px; /* Less spacing */
-            max-width: 90%; /* Smaller page */
-        }
-
-        .store-item {
-            background-color: #222;
-            border: 1px solid #333;
-            border-radius: 10px;
-            padding: 10px; /* Reduced padding */
-            text-align: center;
-            color: #fff;
-        }
-
-        .store-item img {
-            max-width: 100%;
-            border-radius: 10px;
-            margin-bottom: 5px; /* Reduced margin */
-        }
-
-        .store-item h3 {
-            margin: 5px 0;
-        }
-
-        .store-item button {
-            margin-top: 5px; /* Reduced margin */
-            padding: 8px; /* Smaller button */
-            background-color: #7289da;
-            border: none;
-            border-radius: 5px;
-            color: #fff;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .store-item button:hover {
-            background-color: #5865f2;
+        @keyframes pulse {
+            0% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.8;
+            }
+            50% {
+                transform: translate(-50%, -50%) scale(1.2);
+                opacity: 0.6;
+            }
+            100% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.8;
+            }
         }
 
         /* Music Controls Styling */
@@ -161,18 +79,23 @@
             border-radius: 10px;
             padding: 10px;
             color: #fff;
-            display: none; /* Hidden by default */
+            display: none;
             z-index: 1200;
         }
 
-        .music-controls button {
-            background-color: #7289da;
-            border: none;
-            padding: 5px 10px;
+        .music-controls p {
             margin: 5px 0;
+        }
+
+        .music-controls button,
+        .music-controls input {
+            margin: 5px 0;
+            padding: 5px 10px;
             border-radius: 5px;
+            border: none;
             cursor: pointer;
-            color: #fff;
+            background-color: #7289da;
+            color: white;
         }
 
         .music-controls button:hover {
@@ -196,16 +119,6 @@
         .music-toggle:hover {
             background-color: #333;
         }
-
-        /* Discord Embed Styling */
-        iframe {
-            width: 80%;
-            max-width: 300px;
-            height: 400px;
-            border: none;
-            margin: 20px auto;
-            display: block;
-        }
     </style>
 </head>
 <body>
@@ -213,6 +126,9 @@
     <div id="enter-screen">
         <h1>Click to Enter</h1>
     </div>
+
+    <!-- Pulsating Circle -->
+    <div id="pulsating-circle" class="pulsating-circle"></div>
 
     <!-- Autoplay Background Music -->
     <audio id="background-music" loop>
@@ -225,117 +141,78 @@
         <p>Music Controls</p>
         <button onclick="playMusic()">Play</button>
         <button onclick="pauseMusic()">Pause</button>
+        <label>
+            Volume: 
+            <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="1">
+        </label>
         <button onclick="toggleMusicControls()">Close</button>
     </div>
 
     <button id="music-toggle" class="music-toggle" onclick="toggleMusicControls()">♪</button>
 
-    <!-- Sidebar Toggle Button -->
-    <button class="sidebar-toggle" onclick="toggleSidebar()">☰ Menu</button>
-
-    <!-- Sidebar Navigation -->
-    <div id="sidebar" class="sidebar">
-        <a href="#" onclick="showPage('home')">Home</a>
-        <a href="#" onclick="showPage('store')">Store</a>
-    </div>
-
-    <!-- Main Content -->
-    <div id="home" class="main-content fade-in">
-        <h1>Welcome</h1>
-        <p>Accounts for cheap.</p>
-
-        <!-- Embedded Discord Widget -->
-        <iframe 
-            src="https://discord.com/widget?id=1325533924134228018&theme=dark" 
-            allowtransparency="true" 
-            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
-        </iframe>
-
-        <p>
-            If the widget isn't loading, <a href="https://discord.gg/s4FGSvU8yU" target="_blank" style="color: #7289da;">click here</a> to join directly!
-        </p>
-    </div>
-
-    <div id="store" class="main-content fade-in" style="display: none;">
-        <h1>Store</h1>
-        <p>Check out our items below:</p>
-        <div class="store-items">
-            <div class="store-item">
-                <img src="https://files.catbox.moe/s7iw8m.jpeg" alt="Item 1">
-                <h3>Minecraft SFA</h3>
-                <a href="https://ziehung.mysellix.io/product/minecraft-sfa-account-677b1aa56cf7e" target="_blank">
-                    <button>Buy Now</button>
-                </a>
-            </div>
-            <div class="store-item">
-                <img src="https://files.catbox.moe/pqjd5n.jpeg" alt="Item 2">
-                <h3>Optifine Account</h3>
-                <a href="https://example.com/item2" target="_blank">
-                    <button>Buy Now</button>
-                </a>
-            </div>
-            <div class="store-item">
-                <img src="https://files.catbox.moe/6qsb24.jpeg" alt="Item 3">
-                <h3>Valorant Account</h3>
-                <a href="https://example.com/item3" target="_blank">
-                    <button>Buy Now</button>
-                </a>
-            </div>
-        </div>
-    </div>
-
     <script>
-        // Function to toggle the sidebar
-        function toggleSidebar() {
-            const sidebar = document.getElementById('sidebar');
-            const mainContent = document.querySelector('.main-content');
+        const audio = document.getElementById('background-music');
+        const musicControls = document.getElementById('music-controls');
+        const volumeSlider = document.getElementById('volume-slider');
+        const pulsatingCircle = document.getElementById('pulsating-circle');
+        let audioContext, analyser, dataArray;
 
-            sidebar.classList.toggle('open');
-            mainContent.classList.toggle('shifted');
+        // Initialize audio context and analyser for the pulsating effect
+        function setupAudioVisualizer() {
+            audioContext = new (window.AudioContext || window.webkitAudioContext)();
+            const source = audioContext.createMediaElementSource(audio);
+            analyser = audioContext.createAnalyser();
+            source.connect(analyser);
+            analyser.connect(audioContext.destination);
+            analyser.fftSize = 256;
+
+            const bufferLength = analyser.frequencyBinCount;
+            dataArray = new Uint8Array(bufferLength);
+
+            // Animate the pulsating effect
+            function animatePulse() {
+                if (!analyser) return;
+
+                analyser.getByteFrequencyData(dataArray);
+                const averageFrequency = dataArray.reduce((a, b) => a + b, 0) / dataArray.length;
+
+                const scale = Math.max(1, averageFrequency / 50);
+                pulsatingCircle.style.transform = `translate(-50%, -50%) scale(${scale})`;
+                requestAnimationFrame(animatePulse);
+            }
+            animatePulse();
         }
 
-        // Function to show specific pages
-        function showPage(pageId) {
-            // Hide all pages
-            document.querySelectorAll('.main-content').forEach(page => {
-                page.style.display = 'none';
-            });
-
-            // Show the selected page
-            document.getElementById(pageId).style.display = 'block';
-
-            // Close the sidebar after selecting a page
-            toggleSidebar();
-        }
-
-        // Handle the enter screen
+        // Handle Enter Screen
         document.getElementById('enter-screen').addEventListener('click', () => {
             // Start the music
-            const audio = document.getElementById('background-music');
             audio.play();
+
+            // Initialize the audio visualizer
+            if (!audioContext) setupAudioVisualizer();
 
             // Remove the enter screen
             document.getElementById('enter-screen').style.display = 'none';
-
-            // Enable scrolling
-            document.body.classList.add('active');
         });
 
-        // Music control functions
+        // Music Control Functions
         function playMusic() {
-            const audio = document.getElementById('background-music');
             audio.play();
+            if (!audioContext) setupAudioVisualizer();
         }
 
         function pauseMusic() {
-            const audio = document.getElementById('background-music');
             audio.pause();
         }
 
         function toggleMusicControls() {
-            const controls = document.getElementById('music-controls');
-            controls.style.display = controls.style.display === 'none' || controls.style.display === '' ? 'block' : 'none';
+            musicControls.style.display = musicControls.style.display === 'none' || musicControls.style.display === '' ? 'block' : 'none';
         }
+
+        // Volume Control
+        volumeSlider.addEventListener('input', (e) => {
+            audio.volume = e.target.value;
+        });
     </script>
 </body>
 </html>
