--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
             <div class="store-item">
                 <img src="https://files.catbox.moe/pqjd5n.jpeg" alt="Item 2">
                 <h3>Optifine Account</h3>
-                <a href="https://example.com/item2" target="_blank">
+                <a href="https://realborko.github.io/Coming-soon/" target="_blank">
                     <button>Buy Now</button>
                 </a>
             </div>
             <div class="store-item">
                 <img src="https://files.catbox.moe/6qsb24.jpeg" alt="Item 3">
                 <h3>Valorant Account</h3>
-                <a href="https://example.com/item3" target="_blank">
+                <a href="https://realborko.github.io/Coming-soon/" target="_blank">
                     <button>Buy Now</button>
                 </a>
             </div>
