--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome!</title>
+    <script defer src="https://vercel.live/analytics/script.js"></script>
     <style>
         /* General Styling */
         body {
