--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
 
         <!-- Embedded Discord Widget -->
         <iframe 
-            src="https://discord.com/widget?id=1325533924134228018&theme=dark" 
+            src="https://discord.com/widget?id=1277907923917340693&theme=dark" 
             allowtransparency="true" 
             sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
         </iframe>
 
         <p>
-            If the widget isn't loading, <a href="https://discord.gg/s4FGSvU8yU" target="_blank" style="color: #7289da;">click here</a> to join directly!
+            If the widget isn't loading, <a href="https://discord.gg/GP3wM5cSeH" target="_blank" style="color: #7289da;">click here</a> to join directly!
         </p>
     </div>
 
